[tool.poetry]
name = "reptile-care"
version = "0.1.0"
description = ""
authors = ["UchavtovA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.14.0"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
psycopg2-binary = "^2.9.10"
aiosqlite = "^0.21.0"
black = "^25.1.0"
pytz = "^2025.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip_string_normalization = true
target-version = ["py311"]
line-length = 79